# exercism-rust-beer-song-gui

./: Cargo.toml  README.md  index.html
pkg/: package.d.ts  package.js  package.json  package_bg.d.ts  package_bg.wasm
src/: lib.rs
