[package]
version = "0.1.0"
name = "beer-song-gui"
repository = "https://github.com/seed-rs/seed-quickstart"
authors = ["David Mason <drmason13@users.noreply.github.com>"]
description = "App Description"
categories = ["category"]
license = "MIT"
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[dependencies]
# This commit points to Seed 0.7.0 with important fixes.
# Replace with `seed = "0.8.0"` (or newer) once released.
seed = { git = "https://github.com/seed-rs/seed", rev = "0a538f0" }
base = { git = "https://github.com/drmason13/exercism-rust-gui-base" }
beer-song = { git = "https://github.com/drmason13/exercism-rust-beer-song" }

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
